menu.css
.menu-container {
    position: absolute;
    width: 100%;
    max-width: 1200px;
    left: 50%;
    transform: translateX(-50%);
    border: 1px solid #071c23;
    box-sizing: border-box;
    border-top: none;
    z-index: 50;
}

.menu {
    display: flex;
    align-items: center;
    justify-content: space-between;
    height: 75px;
    background-color: white;
}

.nav-logo {
    display: flex;
    align-items: center;
}

.nav-logo img {
    cursor: pointer;
    width: 100%;
    max-width: 150px;
    margin-left: 1rem;
}

.hamburger,
.hamburger-checkbox 
{
    display: none;
}

.nav-links {
    display: flex;
    justify-content: space-around;
    width: 65%;
    align-items: center;
}

.nav-links > div:not(.buttons) {
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 1rem 1.5rem;
    cursor: pointer;
    height: 75px;
}

.nav-links:hover > div:not(.buttons) {
    opacity: .5;
}

.nav-links div:hover {
    opacity: 1 !important;
}

.highlight {
    position: absolute;
    top: 80px;
    transform: rotate(45deg);
    width: 0;
    background-color: #071c23;
    height: 0;
    border-radius: 5px;
}

.nav:hover .highlight {
    top: 68px;
    height: 25px;
    width: 25px;
    transition: all .4s ease-in;
}

.nav-checkbox {
    display: none;
}

.nav-sub {
    box-sizing: border-box;
    width: 100.2%;
    left: 50%;
    top: 77px;
    transform: translate(-50%, -3px);
    position: absolute;
    max-height: 0px;
    overflow: hidden;
    z-index: 2000;
    cursor: default;
    background-color: whitesmoke;
    border-bottom-left-radius: 8px;
    border-bottom-right-radius: 8px;
}

.nav:hover .nav-sub {
    max-height: 1000px;
    border-right: 1px solid #071c23;
    border-bottom: 1px solid #071c23;
    border-top: 1px solid #071c23;
    transition: all .8s ease-in;
}

.sub-menu {
    display: grid;
    grid-template-columns: repeat(8, 1fr);
    gap: 10px;
}

.sub-menu div {
    padding: 1rem;
}

.sub-menu > div {
    grid-column: span 2;
}

.sub-menu-details {
    background-color: #071c23;
    color: aliceblue;
    font-weight: 100;
    border-top: 4px solid #071c23;
    margin-bottom: none;
}

.sub-menu-details h4 {
    font-size: 1.8rem;
    padding: 5px 0px;
    margin-bottom: .5rem;
}

.sub-menu-details h4,
.sub-menu-details p
{
    cursor: text;
}

.sub-menu-heading {
    border-bottom: 1.5px solid #071c23;
    font-weight: 700;
    padding: 5px 5px 5px 0;
    cursor: auto;
}

.sub-menu div:not(.sub-menu-details) p:not(:first-child) {
    cursor: pointer;
    margin: 5px 0px;
    padding: 5px 5px 5px 0;
    /* border: 1px solid pink; */
    transition: all .2s ease-in-out;
}

.sub-menu div:not(.sub-menu-details) p:not(:first-child):hover {
    opacity: 1 !important;
    margin-left: 5px;
    
}

.sub-menu div:not(.sub-menu-details):hover p:not(:first-child) {
    opacity: .5;
}

@media only screen and (max-width: 1200px) {
    .menu-container {
        border: none;
        border-bottom: 1px solid #071c23;
    }

}

@media only screen and (max-width: 800px) {
    .menu-container .buttons {
        display: none;
    }
}

@media only screen and (max-width: 600px) {


    .hamburger,
    .hamburger-checkbox
    {
        display: block;
        position: absolute;
        top: 25px;
        right: 10px;
        cursor: pointer;
        padding: .5rem;
        margin: 10px;
        border-top: 2.5px solid #071c23;
        width: 35px;
        height: 35px;
        transition: all .3s ease-in-out;
    }

    .hamburger-checkbox {
        opacity: 0;
    }

    .hamburger::before {
        content: '';
        display: inline-block;
        position: absolute;
        top: -13.5px;
        right: 0;
        border-top: 2.5px solid #071c23;
        width: 35px;
        height: 35px;
        transition: all .3s ease-in-out;
    }

    .hamburger::after {
        content: '';
        display: inline-block;
        position: absolute;
        border-top: 2.5px solid #071c23;
        width: 35px;
        height: 35px;
        top: 8.5px;
        right: 0;
        transition: all .3s ease-in-out;
    }

    .nav-links { 
        display: none;
    }

    .hamburger-checkbox:checked ~ .hamburger {
        border: none;
    }

    .hamburger-checkbox:checked ~ .hamburger::before {
        display: inline-block;
        position: absolute;
        transform: rotate(45deg);
        top: -7.5px;
        right: 12px;
    }

    .hamburger-checkbox:checked ~ .hamburger::after {
        display: inline-block;
        position: absolute;
        transform: rotate(-45deg);
        top: -7.5px;
        right: -12px;
    }

    .hamburger-checkbox:checked ~ .hamburger:hover::before,
    .hamburger-checkbox:checked ~ .hamburger:hover::after
    {
        border-color: #586774;
        transition: all .2s ease-in-out;

    }


    .hamburger-checkbox:checked ~ .nav-links {
        display: flex;
    }

    .nav-links {
        position: absolute;
        right: 0;
        top: 75px;
        flex-direction: column;
        background-color: white;
    }

    .nav-links .nav {
        width: 100%;
        border-right: 1px solid #071c23;
        border-left: 1px solid #071c23;
    }


    /* Issue with it being 1 pixel to high */
    /* .nav-links .nav:first-child {
        box-sizing: border-box;
        border-top: 1px solid #071c23;
    } */

    .nav-links > div:nth-last-child(2){
        border-bottom-left-radius: 5px;
        border-bottom-right-radius: 5px;
        border-bottom: 1px solid #071c23;
    }

    .sub-menu div:not(.sub-menu-details) p:not(:first-child) {
        padding: 1rem 0;
    }

    .nav-sub {
        position: absolute;
        display: none;
    }

    .highlight {
        display: none;
    }

    .nav-checkbox {
        display: block;
        width: 100%;
        height: 75px;
        cursor: pointer;
        position: absolute;
        opacity: 0;
    }

    .nav-checkbox:checked {
        z-index: 5001; 
        width: 40px;
        height: 40px;
        top: 0;
        right: 0;
        margin: 15px;
    }

    .nav-checkbox:checked ~ .nav-mobile-x::before {
        content: '';
        display: inline-block;
        position: absolute;
        top: 25px;
        right: 32px;
        border-top: 2.5px solid #dee7ef;
        width: 35px;
        height: 35px;
        transition: all .3s ease-in-out;
        z-index: 5000;
        transform: rotate(45deg);
    }

    .nav-checkbox:checked ~ .nav-mobile-x::after {
        content: '';
        display: inline-block;
        position: absolute;
        top: 25px;
        right: 8px;
        border-top: 2.5px solid #dee7ef;
        width: 35px;
        height: 35px;
        transition: all .3s ease-in-out;
        z-index: 5000;
        transform: rotate(-45deg);
    }

    /* Need to figure this out */
    /* .nav-checkbox:checked ~ .nav-mobile-x:hover::before,
    .nav-checkbox:checked ~ .nav-mobile-x:hover::after
    {
        opacity: .5;
        z-index: 10000;
    } */

    .nav-checkbox:checked ~ .nav-sub {
        display: block;
        width: 100%;
        max-height: 1000px;
        border: 1px solid #071c23;
        /* border-top: 1px solid #071c23; */
        transition: all .8s ease-in;
        position: absolute;
        top: 0;
    }

}

